# CLI_url_parser

./: README.md  app.py  config.py  pyproject.toml
tests/: test_app.py
